Removed the author tag from blogit.comments.wrote
This was leading to escaped HTML. Sanitizing the HTML in the view
would have lead to possible vulnerability

Fixes #31

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -8,7 +8,7 @@ en:
       your_comment: "Your comment *"
       add_comment: "Add Comment"
       adding_comment: "Adding Comment..."
-      wrote: "%{author} wrote:"
+      wrote: "wrote:"
       posted_on: "Posted on"
       delete: "delete"
       are_you_sure_you_want_to_remove_this_comment: "Are you sure you want to remove this comment?"
